--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
 plugins {
 id 'com.android.application' version '8.1.4' apply false
 }
